kubernetes/kustomize/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backstage
spec:
  serviceName: backstage
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      containers:
        - name: backstage
          image: ghcr.io/jdmacd/backstage:main
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: backstage
