kubernetes/kustomize/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: cloudflare
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: kube-system
    sectionName: https
  hostnames:
  - "backstage.jtec.xyz"
  rules:
  - backendRefs:
    - name: backstage
      group: ''
      kind: Service
      namespace: backstage
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
